KVH/mykvh/Email-to-anything/objects/Account_Email_Message__c.object
<CustomObject>
    <description>Account email messages</description>
    <fields>
        <fullName>Bcc_Address__c</fullName>
        <description>Bcc addresses</description>
        <label>Bcc Address</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cc_Address__c</fullName>
        <description>Cc addresses</description>
        <label>Cc Address</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <description>Email Address - From or To addresses</description>
        <label>Email Address</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>From_Address__c</fullName>
        <description>From address</description>
        <label>From Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>From_Name__c</fullName>
        <description>From name</description>
        <label>From Name</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Has_Attachment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Email has an attachment</description>
        <label>Attachment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Headers__c</fullName>
        <description>Internet message headers of incoming email</description>
        <label>Headers</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Html_Body__c</fullName>
        <description>Email body in html format</description>
        <label>Html Body</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Importance__c</fullName>
        <label>Importance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Normal</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Incoming__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Email was received</description>
        <label>Incoming</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Master_Id__c</fullName>
        <description>Account parent id</description>
        <label>Parent Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Emails</relationshipLabel>
        <relationshipName>Account_Emails</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Message_Date__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <description>Message date</description>
        <label>Message Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Message_Id__c</fullName>
        <label>Message Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Email status</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Unread</fullName>
                </value>
                <value>
                    <fullName>Replied</fullName>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Read</fullName>
                </value>
                <value>
                    <fullName>Forwarded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <description>Email subject</description>
        <label>Subject</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Text_Body__c</fullName>
        <description>Email plain text body</description>
        <label>Text Body</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>To_Address__c</fullName>
        <description>Email recipient&apos;s address</description>
        <label>To Address</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Account Email</label>
    <nameField>
        <label>Subject</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Emails</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>